--- a/public/ad.html
+++ b/public/ad.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-3 col-xl-1">
+          <div class="col-3 col-md-2 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
@@ -101,7 +101,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-6 offset-xl-1 align-items-center">
+          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1 align-items-center">
             <h1 class="heading">Качественная реклама для&nbsp;любого бизнеса</h1>
             <div class="offer last">Быстро. Точно. Эффективно. Новые возможности для&nbsp;вашего бизнеса с&nbsp;рекламой от&nbsp;SOHO.</div>
           </div>
@@ -111,15 +111,15 @@
     <div class="content p-relative content_element"><img class="element element_1" src="../images/google-logo.png"/><img class="element element_2" src="../images/yandex-logo.png"/>
       <div class="container">
         <div class="row">
-          <div class="col-xl-10">
-            <h2 class="heading margin-bottom">Зачем нужна <span class="text-green">реклама в Яндекс и Google</span></h2>
+          <div class="col-xl-10 col-lg-8">
+            <h2 class="heading margin-bottom">Зачем нужна <span class="text-green">реклама в&nbsp;Яндекс и&nbsp;Google</span></h2>
           </div>
           <div class="col-xl-6 offset-xl-1">
-            <ol class="list list_ol row justify-content-between align-items-center margin-bottom">
-              <li class="list__item col-xl-5">Повышение узнаваемости бренда</li>
-              <li class="list__item col-xl-5">Возвращение ушедших клиентов</li>
-              <li class="list__item col-xl-5">Увеличение количества заявок</li>
-              <li class="list__item col-xl-5">Повышение эффективности рекламы</li>
+            <ol class="list list_ol row justify-content-between align-items-center margin-bottom margin-bottom-xs-none">
+              <li class="list__item col-lg-5">Повышение узнаваемости бренда</li>
+              <li class="list__item col-lg-5">Возвращение ушедших клиентов</li>
+              <li class="list__item col-lg-5">Увеличение количества заявок</li>
+              <li class="list__item list__item_last col-lg-5">Повышение эффективности рекламы</li>
             </ol>
           </div>
           <div class="col-xl-5 offset-xl-1">
@@ -128,7 +128,7 @@
           </div>
           <div class="col-xl-6 offset-xl-1">
             <div class="row margin-bottom">
-              <div class="col-xl-5">
+              <div class="col-sm-5">
                 <div class="item item_with-icon">
                   <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                     <g>
@@ -139,7 +139,7 @@
                   <div class="item__offer">Настройка и запуск от 1 до 5 дней</div>
                 </div>
               </div>
-              <div class="col-xl-5">
+              <div class="col-sm-5">
                 <div class="item item_with-icon">
                   <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                     <g>
@@ -150,7 +150,7 @@
                   <div class="item__offer">Находим только целевую аудиторию</div>
                 </div>
               </div>
-              <div class="col-xl-5">
+              <div class="col-sm-5">
                 <div class="item item_with-icon">
                   <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                     <g>
@@ -161,8 +161,8 @@
                   <div class="item__offer">Вы получите полный доступ к&nbsp;статистике</div>
                 </div>
               </div>
-              <div class="col-xl-5">
-                <div class="item item_with-icon">
+              <div class="col-sm-5">
+                <div class="item item_last-md item_with-icon">
                   <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                     <g>
                       <path class="active-path" d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB"></path>
@@ -176,11 +176,12 @@
           </div>
         </div>
         <div class="row align-items-end">
-          <div class="col-xl-4 offset-xl-2">
-            <p class="heading heading_small">У вас <span class="text-green">уже есть реклама, </span>но вы недовольны результатами?</p>
-            <p class="offer">Клиентов, которые заказывают товар, очень мало? Конечная стоимость клиента слишком высока? Затраты на рекламу больше, чем доход от нее? Вам кажется, что бюждет просто “сливают”?</p><a class="btn btn_primary" href="#">Анализ рекламной кампании</a>
+          <div class="col-xl-4 offset-xl-2 col-lg-6 offset-lg-3">
+            <p class="heading heading_small">У вас <span class="text-green">уже есть реклама, </span>но&nbsp;вы недовольны результатами?</p>
+            <p class="offer">Клиентов, которые заказывают товар, очень мало? Конечная стоимость клиента слишком высока? Затраты на рекламу больше, чем доход от нее? Вам кажется, что бюждет просто “сливают”?</p>
+            <div class="margin-bottom-lg"><a class="btn btn_primary" href="#">Анализ рекламной кампании</a></div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-8 offset-md-2 col-lg-6 offset-lg-3 offset-xl-0">
             <p class="offer offer_subtitle text-uppercase text-bold">Выход есть — <span class="text-darkblue">многофакторный анализ                  </span></p>
             <p class="offer small">Он проводится на всех уровнях: рынок, стратегия, потребность в товаре, размер ставок и корректировок</p>
             <p class="offer last"><span class="text-bold">В результате </span>мы составим список рекомендаций: как улучшить рекламную кампанию и страницы сайта. Это приведет к повышению эффективности и увеличению вашего дохода, одновременно помогая оценить работу специалистов, которые в данный момент занимаются ведением рекламы Яндекс и/или Google.            </p>
@@ -195,24 +196,24 @@
             <h4 class="heading heading_medium margin-bottom">Пример рекламной кампании</h4>
             <div class="offer">Один из последних проектов SOHO</div>
           </div>
-          <div class="col-xl-5">
+          <div class="col-xl-5 col-lg-8">
             <div class="project__task margin-bottom">
               <div class="project__task__item">Задача</div>
               <div class="project__task__content"> 
-                <p class="offer">Необходимо было быстро настроить рекламную кампанию в Директе, для скорейшего обеспечения клиента заказами. После этого настроить рекламу в Google. Одно из ключевых требований - только целевая аудитория и ни в коем случае не выходить за рамки бюджета. </p>
+                <p class="offer last">Необходимо было быстро настроить рекламную кампанию в Директе, для скорейшего обеспечения клиента заказами. После этого настроить рекламу в Google. Одно из ключевых требований - только целевая аудитория и ни в коем случае не выходить за рамки бюджета. </p>
               </div>
             </div>
           </div>
-          <div class="col-xl-5">
+          <div class="col-xl-5 col-lg-8">
             <div class="project__task margin-bottom">
               <div class="project__task__item">Решение</div>
               <div class="project__task__content">
-                <p class="offer">Изначально разработали рекомендации по улучшению посадочных страниц, чтобы посетители видели необходимую информацию, проходили большую часть этапов продажи на странице и оставляли заявку. Пока вносились правки на сайте, собрали ключевые слова, разработали УТП, проработали тексты объявлений, настроили счетчики, аналитику  и цели для возможности точной оценки эффективности рекламы.</p>
+                <p class="offer last">Изначально разработали рекомендации по улучшению посадочных страниц, чтобы посетители видели необходимую информацию, проходили большую часть этапов продажи на странице и оставляли заявку. Пока вносились правки на сайте, собрали ключевые слова, разработали УТП, проработали тексты объявлений, настроили счетчики, аналитику  и цели для возможности точной оценки эффективности рекламы.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="row margin-bottom-sm">
+        <div class="row margin-bottom-xs">
           <div class="col-xl-8">
             <p class="heading heading_small">Результаты через 1 месяц</p>
             <p class="offer last">
@@ -221,44 +222,45 @@
             </p>
           </div>
         </div>
-        <div class="row margin-bottom-sm">
+        <div class="row margin-bottom-xs">
           <div class="col-xl-8">
             <p class="heading heading_small">Результаты через 2 месяца</p>
             <p class="offer last">Сумма расходов увеличилась на 1520 руб. за месяц. И вот каких результатов нам удалось достичь:</p>
           </div>
         </div>
         <div class="row margin-bottom">
-          <div class="col-xl-2 col-lg-4">
+          <div class="col-xl-2 col-lg-4 col-5 d-flex">
             <div class="item item_result item_info">
-              <div class="item__offer">увеличили количество переходов на сайт</div>
+              <div class="item__offer">увеличили количество переходов на&nbsp;сайт</div>
               <div class="item__result">на 24%</div>
             </div>
           </div>
-          <div class="col-xl-2 col-lg-4">
+          <div class="col-xl-2 col-lg-4 col-5 d-flex">
             <div class="item item_result item_info">
               <div class="item__offer">снизили стоимость цены заказа</div>
               <div class="item__result">в 3 раза</div>
             </div>
           </div>
-          <div class="col-xl-2 col-lg-4">
-            <div class="item item_result item_info">
-              <div class="item__offer">увеличили количество заявок с сайта</div>
+          <div class="col-xl-2 col-lg-4 col-5 d-flex">
+            <div class="item item_result item_info item_last-md">
+              <div class="item__offer">увеличили количество заявок с&nbsp;сайта</div>
               <div class="item__result">в 2,1 раза</div>
             </div>
           </div>
-          <div class="col-xl-2 col-lg-4">
-            <div class="item item_result item_info">
-              <div class="item__offer">доходность инвестиции в рекламу</div>
+          <div class="col-xl-2 col-lg-4 col-5 d-flex">
+            <div class="item item_result item_info item_last-md">
+              <div class="item__offer">доходность инвестиции в&nbsp;рекламу</div>
               <div class="item__result">700%</div>
             </div>
           </div>
         </div>
         <div class="row align-items-center">
-          <div class="col-xl-4">
-            <p class="heading heading_small">Результаты через 3 месяца</p>
-            <p class="offer">Цена клика стала еще меньше в 1,9 раза, а количество заявок увеличилось на 57%</p><a class="btn btn_primary" href="#">Хочу эффективную рекламу</a>
+          <div class="col-xl-4 col-md-6">
+            <p class="heading heading_small">Результаты через 3&nbsp;месяца</p>
+            <p class="offer">Цена клика стала еще меньше в&nbsp;1,9 раза, а&nbsp;количество заявок увеличилось на&nbsp;57%</p>
+            <p class="offer"> <a class="btn btn_primary" href="#">Хочу эффективную рекламу</a></p>
           </div>
-          <div class="col-xl-4"><img class="img-fluid" src="../images/test-03.png"/></div>
+          <div class="col-xl-4 col-md-4 margin-top-sm"><img class="img-fluid" src="../images/test-03.png"/></div>
         </div>
       </div>
     </div>
@@ -271,7 +273,7 @@
           </div>
         </div>
         <div class="row align-items-center justify-content-center">
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_1" src="../images/comment/ad_comment_0.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_1" src="../images/comment/ad_comment_0.png"/>
             <div class="price">
               <div class="price__header">Для сайтов визиток</div>
               <div class="price__content">
@@ -289,7 +291,7 @@
               <div class="price__footer">стоимость 17к</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_2" src="../images/comment/ad_comment_2.png"/>
+          <div class="col-xl-3 col-lg-4 p-relative"><img class="element element_2" src="../images/comment/ad_comment_2.png"/>
             <div class="price price_large">
               <div class="price__header">для небольших каталогов</div>
               <div class="price__content">
@@ -307,7 +309,7 @@
               <div class="price__footer">стоимость 27к</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_3" src="../images/comment/ad_comment_1.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_3" src="../images/comment/ad_comment_1.png"/>
             <div class="price">
               <div class="price__header">Для интернет-магазинов</div>
               <div class="price__content">
@@ -328,13 +330,13 @@
         </div>
       </div>
       <div class="container content_price__container">
-        <div class="row justify-content-center margin-bottom">
+        <div class="row justify-content-center margin-bottom margin-bottom-sm-none">
           <div class="col-xl-7 text-center">
             <div class="heading heading_small">Тарифы для тех, у кого <span class="text-green">уже есть реклама</span></div>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-xl-4 col-lg-5">
+          <div class="col-xl-4 col-md-5">
             <div class="price-line">
               <div class="price-line__title">Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)</div>
               <div class="price-line__value">от 5к</div>
@@ -352,7 +354,7 @@
               <div class="price-line__value">от 5к</div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-5">
+          <div class="col-xl-4 col-md-5">
             <div class="price-line">
               <div class="price-line__title">Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)</div>
               <div class="price-line__value">от 5к</div>
@@ -392,7 +394,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col">
+          <div class="col-12 col-sm-4 col-lg-2">
             <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -410,8 +412,8 @@
               </g>
             </svg>
           </div>
-          <div class="col"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col col-xl-6">
+          <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
