--- a/public/blog.html
+++ b/public/blog.html
@@ -44,7 +44,7 @@
           <path class="header__nav__path" d="M505.02,350.213c-30.289-25.979-64.619-55.426-131.022-55.426s-100.733,29.446-131.022,55.426C214.332,374.781,189.594,396,137.996,396c-51.594,0-76.331-21.218-104.973-45.785l-0.002-0.002c-8.384-7.189-21.009-6.223-28.201,2.16c-7.191,8.384-6.224,21.011,2.16,28.202C37.268,406.555,71.597,436,137.996,436c66.403,0,100.733-29.446,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159C514.371,370.03,513.405,357.404,505.02,350.213z"></path>
         </g>
       </svg>
-      <div class="nav">
+      <nav class="nav">
         <ul class="header__navbar">
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Верстка и разработка</a></li>
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Реклама</a></li>
@@ -53,87 +53,89 @@
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Блог</a></li>
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Дизайн</a></li>
         </ul><a class="nav__close" id="navbarClose">Закрыть меню</a>
-      </div>
+      </nav>
     </header>
-    <div class="post__elements elements_01">
-      <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
-        <defs>
-          <filter id="shadow" filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%">
-            <feGaussianBlur in="SourceAlpha" result="blur" stdDeviation="3"></feGaussianBlur>
-            <feOffset dx="5" dy="5" in="blur" result="offsetBlurredAlpha"></feOffset>
-            <feComponentTransfer>
-              <feFuncA type="linear" slope="0.2"></feFuncA>
-            </feComponentTransfer>
-            <feMerge>
-              <feMergeNode></feMergeNode>
-              <feMergeNode in="SourceGraphic"></feMergeNode>
-            </feMerge>
-          </filter>
-          <linearGradient id="gradient" data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
-            <stop offset="0" stop-color="#222222"></stop>
-            <stop offset="1" stop-color="#343434"></stop>
-          </linearGradient>
-        </defs>
-        <g fill-rule="nonzero">
-          <path style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90"></path>
-        </g>
-      </svg>
-    </div>
-    <div class="post__elements elements_02">
-      <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
-        <defs>
-          <linearGradient id="gradient_02" data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
-            <stop offset="0" stop-color="#222222"></stop>
-            <stop offset="1" stop-color="#343434"></stop>
-          </linearGradient>
-        </defs>
-        <g style="fill: url(#gradient_02); filter: url(#shadow);">
-          <rect x="12" y="9.5" width="71" height="160"></rect>
-          <rect x="97" y="9.5" width="71" height="160">           </rect>
-        </g>
-      </svg>
-    </div>
-    <div class="container post__container">
-      <div class="row margin-bottom">
-        <div class="col-9">
-          <h1 class="heading heading_blog">Самое актуальное в нашем блоге</h1>
-        </div>
-        <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-            <div class="post__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
-            <div class="post__item__info">12.09.2018</div></a></div>
-        <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-            <div class="post__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
-            <div class="post__item__info">12.09.2018</div></a></div>
-        <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-            <div class="post__item__title">Продвижение сайта почти бесплатно</div>
-            <div class="post__item__info">12.09.2018</div></a></div>
-        <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-            <div class="post__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
-            <div class="post__item__info">12.09.2018</div></a></div>
-        <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-            <div class="post__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
-            <div class="post__item__info">12.09.2018</div></a></div>
-        <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-            <div class="post__item__title">Продвижение сайта почти бесплатно</div>
-            <div class="post__item__info">12.09.2018</div></a></div>
+    <main>
+      <div class="post__elements elements_01">
+        <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
+          <defs>
+            <filter id="shadow" filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%">
+              <feGaussianBlur in="SourceAlpha" result="blur" stdDeviation="3"></feGaussianBlur>
+              <feOffset dx="5" dy="5" in="blur" result="offsetBlurredAlpha"></feOffset>
+              <feComponentTransfer>
+                <feFuncA type="linear" slope="0.2"></feFuncA>
+              </feComponentTransfer>
+              <feMerge>
+                <feMergeNode></feMergeNode>
+                <feMergeNode in="SourceGraphic"></feMergeNode>
+              </feMerge>
+            </filter>
+            <linearGradient id="gradient" data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
+              <stop offset="0" stop-color="#222222"></stop>
+              <stop offset="1" stop-color="#343434"></stop>
+            </linearGradient>
+          </defs>
+          <g fill-rule="nonzero">
+            <path style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90"></path>
+          </g>
+        </svg>
       </div>
-    </div>
-    <div class="content content_contact inside">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-6">
-            <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
-            <form class="form form_inline" action="">
-              <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
-              <button class="btn btn_primary" type="submit">Хочу больше клиентов</button>
-            </form>
-          </div>
-          <div class="col-xl-3">
-            <div class="offer">How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. </div>
+      <div class="post__elements elements_02">
+        <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
+          <defs>
+            <linearGradient id="gradient_02" data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
+              <stop offset="0" stop-color="#222222"></stop>
+              <stop offset="1" stop-color="#343434"></stop>
+            </linearGradient>
+          </defs>
+          <g style="fill: url(#gradient_02); filter: url(#shadow);">
+            <rect x="12" y="9.5" width="71" height="160"></rect>
+            <rect x="97" y="9.5" width="71" height="160">           </rect>
+          </g>
+        </svg>
+      </div>
+      <section class="container post__container">
+        <div class="row margin-bottom">
+          <header class="col-10 col-md-9">
+            <h1 class="heading heading_blog">Самое актуальное в нашем блоге</h1>
+          </header>
+          <article class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
+              <div class="post__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
+              <div class="post__item__info">12.09.2018</div></a></article>
+          <article class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
+              <div class="post__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
+              <div class="post__item__info">12.09.2018</div></a></article>
+          <article class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
+              <div class="post__item__title">Продвижение сайта почти бесплатно</div>
+              <div class="post__item__info">12.09.2018</div></a></article>
+          <article class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
+              <div class="post__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
+              <div class="post__item__info">12.09.2018</div></a></article>
+          <article class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
+              <div class="post__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
+              <div class="post__item__info">12.09.2018</div></a></article>
+          <article class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
+              <div class="post__item__title">Продвижение сайта почти бесплатно</div>
+              <div class="post__item__info">12.09.2018</div></a></article>
+        </div>
+      </section>
+      <section class="content content_contact inside">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-6">
+              <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
+              <form class="form form_inline" action="">
+                <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
+                <button class="btn btn_primary" type="submit">Хочу больше клиентов</button>
+              </form>
+            </div>
+            <div class="col-xl-3">
+              <div class="offer">How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
+      </section>
+    </main>
     <footer class="footer">
       <div class="container">
         <div class="row justify-content-between align-items-center">
@@ -156,7 +158,7 @@
             </svg>
           </div>
           <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col-12 col-xl-6 col-lg-6">
+          <nav class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Дизайн</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
@@ -166,7 +168,7 @@
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Портфолио</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Блог</a></li>
             </ul>
-          </div>
+          </nav>
         </div>
       </div>
     </footer>
